src/tests/testfiles/binary-operators/types-5.txt
Error at 2:9: Comparison operator operands need to be of same type (have char[] and float)
"1" <= 2.0;
    ^
